--- a/PedraPapaelTesoura/app/src/main/res/layout/activity_main.xml
+++ b/PedraPapaelTesoura/app/src/main/res/layout/activity_main.xml
@@ -94,36 +94,43 @@
         app:srcCompat="@drawable/pedra" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/text_name_pedra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/txt_pedra"
+        android:textAlignment="center"
+        android:textColor="@color/txt_PPT"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_pedra" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/img_papel" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/text_name_tesoura"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="36dp"
+        android:text="@string/txt_tesoura"
+        android:textAlignment="center"
+        android:textColor="@color/txt_PPT"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/img_tesoura" />
+        app:layout_constraintTop_toBottomOf="@+id/img_papel" />
+
+    <TextView
+        android:id="@+id/text_name_papel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="@string/txt_papel"
+        android:textAlignment="center"
+        android:textColor="@color/txt_PPT"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/text_name_tesoura"
+        app:layout_constraintHorizontal_bias="0.538"
+        app:layout_constraintStart_toEndOf="@+id/text_name_pedra"
+        app:layout_constraintTop_toBottomOf="@+id/img_papel" />
 
 </android.support.constraint.ConstraintLayout>
