--- a/ComponentesBasicos/app/src/main/res/layout/activity_main.xml
+++ b/ComponentesBasicos/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,30 @@
             android:layout_height="wrap_content"
             android:text="Vermelha" />
 
+        <RadioGroup
+            android:id="@+id/radioGroupSexo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sexo" />
+
+            <RadioButton
+                android:id="@+id/radioButtonM"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="M" />
+
+            <RadioButton
+                android:id="@+id/radioButtonF"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="F" />
+        </RadioGroup>
+
         <Button
             android:id="@+id/button"
             android:layout_width="match_parent"
