--- a/ToggleeSwitch/app/src/main/res/layout/activity_main.xml
+++ b/ToggleeSwitch/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,12 @@
         android:textOff="Desligado"
         android:textOn="Ligado" />
 
+    <CheckBox
+        android:id="@+id/checkBoxSenha"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="lembrar senha" />
+
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
