--- a/FloatActionButton/app/src/main/res/layout/activity_main.xml
+++ b/FloatActionButton/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,9 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:backgroundTint="#E60B0B"
+        app:srcCompat="@android:drawable/ic_dialog_map"
+        tools:ignore="SpeakableTextPresentCheck"
+        android:contentDescription="TODO" />
 
 </android.support.design.widget.CoordinatorLayout>
