--- a/Abas/app/src/main/res/layout/activity_main.xml
+++ b/Abas/app/src/main/res/layout/activity_main.xml
@@ -12,28 +12,29 @@
         android:id="@+id/viewPagerTab"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:background="@color/black"
         app:stl_indicatorAlwaysInCenter="false"
         app:stl_indicatorWithoutPadding="false"
         app:stl_indicatorInFront="false"
         app:stl_indicatorInterpolation="smart"
         app:stl_indicatorGravity="bottom"
-        app:stl_indicatorColor="#40C4FF"
-        app:stl_indicatorThickness="4dp"
+        app:stl_indicatorColor="#C62828"
+        app:stl_indicatorThickness="3dp"
         app:stl_indicatorWidth="auto"
-        app:stl_indicatorCornerRadius="2dp"
-        app:stl_overlineColor="#4D000000"
+        app:stl_indicatorCornerRadius="10dp"
+        app:stl_overlineColor="@color/white"
         app:stl_overlineThickness="0dp"
-        app:stl_underlineColor="#4D000000"
+        app:stl_underlineColor="#E40808"
         app:stl_underlineThickness="1dp"
-        app:stl_dividerColor="#4D000000"
-        app:stl_dividerThickness="1dp"
+        app:stl_dividerColor="#C62828"
+        app:stl_dividerThickness="3dp"
         app:stl_defaultTabBackground="?attr/selectableItemBackground"
-        app:stl_defaultTabTextAllCaps="true"
-        app:stl_defaultTabTextColor="#FC000000"
-        app:stl_defaultTabTextSize="12sp"
-        app:stl_defaultTabTextHorizontalPadding="16dp"
+        app:stl_defaultTabTextAllCaps="false"
+        app:stl_defaultTabTextColor="#FCEC0808"
+        app:stl_defaultTabTextSize="20sp"
+        app:stl_defaultTabTextHorizontalPadding="20dp"
         app:stl_defaultTabTextMinWidth="0dp"
-        app:stl_distributeEvenly="false"
+        app:stl_distributeEvenly="true"
         app:stl_clickable="true"
         app:stl_titleOffset="24dp"
         app:stl_drawDecorationAfterTab="false"
@@ -43,7 +44,8 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/viewPagerTab" />
+        android:layout_below="@id/viewPagerTab"
+        android:background="#CABABA"/>
 
 
 </LinearLayout>
