--- a/MyApplicationFirebaseTest/app/src/main/res/layout/activity_main.xml
+++ b/MyApplicationFirebaseTest/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/celular" />
+        app:srcCompat="@drawable/padrao" />
 
     <Button
         android:id="@+id/button_upload"
