--- a/Slider/app/src/main/res/layout/intro_cadastro.xml
+++ b/Slider/app/src/main/res/layout/intro_cadastro.xml
@@ -38,6 +38,7 @@
         android:layout_marginBottom="16dp"
         android:onClick="btCadastrar"
         android:text="Cadastre-se"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/txt_conta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
