--- a/Organizze/app/src/main/res/values/organizze_color.xml
+++ b/Organizze/app/src/main/res/values/organizze_color.xml
@@ -3,4 +3,14 @@
     <color name="coloPrimarySuperior">#01c7d2</color>
     <color name="coloPrimaryDarkInferior">#00b2bc</color>
     <color name="colorAccent">#00695C</color>
+
+    <!-- Color despesas! -->
+    <color name="coloPrimaryDespesas">#C62828</color>
+    <color name="coloPrimaryDarkDespesas">#D84315</color>
+    <color name="colorAccentDespesas">#F9A825</color>
+
+    <!-- Color Receitas! -->
+    <color name="coloPrimaryReceitas">#283593</color>
+    <color name="coloPrimaryDarkReceitas">#1565C0</color>
+    <color name="colorAccentReceitas">#0277BD</color>
 </resources>
