--- a/Organizze/app/src/main/res/layout/activity_receitas.xml
+++ b/Organizze/app/src/main/res/layout/activity_receitas.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/edit_descricao"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.DespesasActivity">
@@ -19,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
-            android:id="@+id/edit_valor"
+            android:id="@+id/edite_valor_r"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
@@ -46,6 +47,7 @@
         app:layout_constraintVertical_chainStyle="packed">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edite_data_r"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="ex: 27/11/2022" />
@@ -65,6 +67,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edite_categoria_r"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="ex: salario" />
@@ -82,13 +85,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edite_descricao_r"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="ex: salario mensal" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnFabSalvar"
+        android:id="@+id/btn_fab_salvar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -96,6 +100,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_check" />
+        app:srcCompat="@drawable/ic_check"
+        android:onClick="salvarReceita"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
