--- a/Organizze/app/src/main/res/layout/activity_principal.xml
+++ b/Organizze/app/src/main/res/layout/activity_principal.xml
@@ -10,14 +10,16 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.Organizze.AppBarOverlay">
+        android:theme="@style/Theme.Organizze.AppBarOverlay"
+        app:elevation="0dp">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.Organizze.PopupOverlay" />
+            app:popupTheme="@style/Theme.Organizze.PopupOverlay"
+            />
 
     </com.google.android.material.appbar.AppBarLayout>
 
